# limonite

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  sample.lim
benches/: lexer.rs
src/: .gitignore  interner.rs  lib.rs  main.rs  span.rs  userfacing_error.rs  utils.rs
src/codegen/: builtins.rs  codegen.rs  mod.rs
src/codegen/llvm/: builtins.rs  codegen.rs  core.rs  mod.rs
src/codegen/llvm/std/: string.rs  vec.rs
src/lexical/: keywords.rs  lexer.rs  lexer_new.rs  mod.rs  symbols.rs  token.rs  tokens.rs  types.rs
src/llvm/: builtins.rs  codegen.rs  mod.rs
src/semantic/: analyzer.rs  analyzer_trait.rs  mod.rs  type_checker.rs
src/syntax/: block.rs  expr.rs  expr_new.rs  exprs.rs  items.rs  lexer.rs  literals.rs  local.rs  mod.rs  op.rs  parser.rs  parser_new.rs  stmt.rs  types.rs  visitor.rs
src/syntax/ast/: consts.rs  expr.rs  literals.rs  mod.rs  op.rs
src/syntax/core/: keywords.rs  mod.rs  punctuation.rs  symbols.rs  tokens.rs  types.rs
src/tests/: test_lexer.rs
test/: README.md  test_lexer.rs
test/lang/: test_hello_world.lim
tests/: 1_HelloWorld.lim  README.md  lib.rs  mod.rs  test_analysis.rs  test_lexer.rs  test_llvm_codegen.rs  test_parser.rs  test_type_checker.rs  tests.rs  utils.rs
tests/all/: main.rs  test_lexer.rs  test_llvm_codegen.rs  test_parser.rs  utils.rs
tests/lang/: test_functions.lim  test_hello_world.lim  test_indentation.lim  test_numerics.lim  test_type_inference.lim
