[package]
name = "limonite"
version = "0.1.0"
authors = [
    "thadancardin@gmail.com",
    "thadan64@gmail.com"
]
license = "Apache-2.0"
description = "The Limonite language compiler"
repository = "https://github.com/TheDan64/limonite"
edition = "2018"

[lib]
name = "limonite"
path = "src/lib.rs"

[[bin]]
name = "limonite"
path = "src/main.rs"
test = false
doc = false

[features]
default = ["llvm-backend"]
llvm-backend = ["inkwell"]

[dependencies]
env_logger = "0.7"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0", optional = true }
log = "*"
rustc-hash = "1.1"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer"
harness = false
