[package]
name = "limonite"
version = "0.2.0"
authors = [
    "thadancardin@gmail.com",
    "thadan64@gmail.com"
]
license = "Apache-2.0"
description = "The Limonite language compiler"
repository = "https://github.com/TheDan64/limonite"
edition = "2018"

[lib]
name = "limonite"
path = "src/lib.rs"

[[bin]]
name = "limonite"
path = "src/main.rs"
test = false
doc = false

[features]
default = ["llvm-backend"]
llvm-backend = ["inkwell"]

[dependencies]
debug_tree = "0.3"
hash-chain = { git = "https://github.com/TheDan64/hash-chain", branch = "master" }
inkwell = { version = "0.1.0-beta.2", features = ["llvm10-0"], optional = true }
rustc-hash = "1.1"
slog = "2.5"
slog-term = "2.8"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer"
harness = false
